# CRFT_tr

./: .gitignore  cleanup_reports.bat  pyproject.toml  run_tests.bat  sample_test.robot
config/: testdata.json  testusers.robot
reports/: log_202515za_213351.html  output_202515za_213351.xml  report_202515za_213351.html
resources/: automobile.resource
src/: __init__.py  sampletest.robot
suites/: automobile.robot
